--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "@fortawesome/free-solid-svg-icons": "5.13.0",
     "@fortawesome/vue-fontawesome": "0.1.9",
     "buefy": "0.8.20",
+    "bulma-quickview": "2.0.0",
     "core-js": "^3.6.4",
+    "install": "0.13.0",
+    "npm": "6.14.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
   },
