--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "parserOptions": {
       "parser": "babel-eslint"
     },
-    "rules": {}
+    "rules": {
+      "comma-dangle": "off"
+    }
   },
   "browserslist": [
     "> 1%",
