--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bulma-quickview": "2.0.0",
     "core-js": "^3.6.4",
     "install": "0.13.0",
+    "nanoid": "3.1.9",
     "npm": "6.14.5",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6"
